added menu pag for mobile

--- a/src/components/translations/languages/en.json
+++ b/src/components/translations/languages/en.json
@@ -6,7 +6,8 @@
     "profile": "Profile",
     "campaign": "Campaign",
     "messages": "Messages",
-    "notifications": "Notifications"
+    "notifications": "Notifications",
+    "open": "Open"
   },
 
   "left_sidebar": {
