add new campaign module and it's file

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -94,7 +94,9 @@
     "explore": "Explore",
     "participants": "Participants",
     "user": "User",
-    "pics": "Pics"
+    "pics": "Pics",
+    "company": "Company",
+    "creator": "Creator"
   },
 
   "left_sidebar_settings": {
