remove unwanted file and maintain  folder structure for thr common module

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -108,7 +108,8 @@
     "user": "User",
     "pics": "Pics",
     "company": "Company",
-    "creator": "Creator"
+    "creator": "Creator",
+    "information": "Information"
   },
 
   "left_sidebar_owner_menu": {
