implemented side bar participant filter and fix folder structure for the same

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -58,6 +58,14 @@
     "reset_filters": {
       "name": "Reset filters",
       "type": "button"
+    },
+    "gender": {
+      "name": "Gender",
+      "type": "radio"
+    },
+    "age": {
+      "name": "Age",
+      "type": "select"
     }
   },
 
