--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -69,6 +69,16 @@
     }
   },
 
+  "message_module": {
+    "name": "Message",
+    "type": {
+      "subscribed": "Subscribed",
+      "unknown": "Unknown",
+      "like_you": "Like you",
+      "companies": "Companies"
+    }
+  },
+
   "mobile_sidebar_information": {
     "aboutus": "About Us",
     "legal_notice": "Legal Notice",
