implemetation for the information and service components

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -16,11 +16,11 @@
     "campaigns": "Campaigns",
     "campaign_policy": "Campaign Policy",
     "advertising": "Advertising",
-    "advertising_policy": "Advertising policy",
+    "advertising_policy": "Advertising Policy",
     "general_terms_and_conditions": "General Terms and Conditions",
-    "data_protection_and_privacy_policy": "Data protection and privacy policy",
+    "data_protection_and_privacy_policy": "Data protection and privacy Policy",
     "platform_policy": "Platform policy",
-    "cancellation_policy": "Cancellation policy",
+    "cancellation_policy": "Cancellation Policy",
     "terms_of_use": "Terms of use"
   },
 
