--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -210,6 +210,7 @@
 
   "left_sidebar_settings": {
     "edit_profile": "Edit profile",
+    "admin": "Admin",
     "privacy": "Privacy",
     "bussiness_profile": "Bussiness profile",
     "campaign": "Campaign",
