implementation of the auto complete location

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -89,7 +89,7 @@
     },
     "location": {
       "name": "Location",
-      "type": "text"
+      "type": "auto-complete"
     },
     "radius": {
       "name": "Radius",
