implementation of the campaign mock data with redux and fixed bugs

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -19,6 +19,8 @@
 
   "apply_campaign": "Apply for this campaign",
 
+  "favourite_campaigns": "Favourite Campaigns",
+
   "messages_modal": {
     "unknown": "Unknown",
     "messages": "Messages",
