language transaltion module

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -115,7 +115,7 @@
     "legal_notice": "Legal Notice",
     "general_terms_and_conditions": "General terms & Conditions",
     "netzdg": "NETZDG",
-    "language": "Language",
+    "language": "Sprache",
     "terms_of_use": "Terms of Use",
     "better": "For a better user experience we use ",
     "agree": "By using picstagraph you do agree",
