--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -67,6 +67,12 @@
     "terms_of_use": "Terms of use"
   },
 
+  "tool_tips": {
+    "report": "Report Post",
+    "save": "Save Post",
+    "lock": "locks / unlocks content"
+  },
+
   "back_office_menu": {
     "dashboard": "Dashboard",
     "cms_managment": "CMS Management",
