implemented handleFavorite event and transalation module for the modal

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -21,6 +21,76 @@
 
   "favourite_campaigns": "Favourite Campaigns",
 
+  "create_ads": {
+    "title_of_ads": "Title of Ads",
+    "add_title": "Add title",
+    "add_location": "Add Location",
+    "add_radius": "Add Radius",
+    "add_category": "Add Category",
+    "add_description": "Add Description",
+    "add_target_group": "Add Target group",
+    "male_female": "Female & Male",
+    "male": "Male",
+    "female": "Female",
+    "define_details": "Define details",
+    "action_button": "Add call to action button",
+    "yes": "Yes",
+    "no": "No",
+    "insert_link": "Insert link",
+    "define_runtime_budget": "Define runtime & budget",
+    "start": "Start",
+    "end": "End",
+    "define_daily_budget": "Define daily budget",
+    "maximum_number_of_clicks": "Maximum number of clicks",
+    "max_1200_clicks": "Max. 1200 clicks",
+    "information_on_payment": "Information on payment",
+    "actively_clicks": "You only have to pay when a user actively clicks on your ad on Picstagraph.",
+    "cost_control": "100 % cost control",
+    "cost_per_Click": "Cost per Click: 1,00 €",
+    "payment_only_after_ad_was_cloes": "Payment only after ad was cloes",
+    "total_budget_can_not_be_exceeded": "Total budget can not be exceeded"
+  },
+
+  "create_campaigns": {
+    "title_of_campaigns": "Title of campaigns",
+    "title": "Title",
+    "add_title": "Add title",
+    "inquiry_tag": "Inquiry tag",
+    "select_inquiry": "Select Inquiry",
+    "inquiry": "Inquiry",
+    "offer_tag": "Offer tag",
+    "select_offer": "Select offer",
+    "offer": "Offer",
+    "details_of_campaigns": "Details of campaigns",
+    "male": "Male",
+    "female": "Female",
+    "male_female": "Female & Male",
+    "company": "Company",
+    "target_group": "Target group",
+    "image": "image",
+    "video": "Video",
+    "type": "Type",
+    "anonymous": "Anonymous",
+    "public": "Public",
+    "procedure": "Procedure",
+    "application_criteria": "Application criteria",
+    "select_category": "Select category",
+    "add_category": "Add Category",
+    "add_location": "Add Location",
+    "define_runtime_budget": "Define runtime & budget",
+    "start": "Start",
+    "end": "End",
+    "define_daily_budget": "Define daily budget",
+    "maximum_number_of_clicks": "Maximum number of clicks",
+    "max_1200_clicks": "Max. 1200 clicks",
+    "information_on_payment": "Information on payment",
+    "actively_clicks": "You only have to pay when a user actively clicks on your ad on Picstagraph.",
+    "cost_control": "100 % cost control",
+    "cost_per_Click": "Cost per Click: 1,00 €",
+    "payment_only_after_ad_was_cloes": "Payment only after ad was cloes",
+    "total_budget_can_not_be_exceeded": "Total budget can not be exceeded"
+  },
+
   "messages_modal": {
     "unknown": "Unknown",
     "messages": "Messages",
