--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -26,6 +26,7 @@
     "add_location": "Add Location",
     "add_category": "Add Category",
     "add_description": "Add Description",
+    "advertisement": "Label as advertisement",
     "upload_title_image": "Upload title image"
   },
 
