changes done for isAdmin issue

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -19,7 +19,106 @@
 
   "apply_campaign": "Apply for this campaign",
 
-  "favourite_campaigns": "Lieblingskampagnen",
+  "favourite_campaigns": "Favourite Campaigns",
+
+  "upload_modal": {
+    "title_of_upload": "Title of Upload",
+    "add_location": "Add Location",
+    "add_category": "Add Category",
+    "add_description": "Add Description",
+    "upload_title_image": "Upload title image"
+  },
+
+  "create_ads": {
+    "runtime": "Runtime",
+    "runtime_passed": "Runtime passed",
+    "remaining_runtime": "Remaining runtime",
+    "title_of_ads": "Title of Ads",
+    "add_title": "Add title",
+    "add_location": "Add Location",
+    "add_radius": "Add Radius",
+    "add_category": "Add Category",
+    "add_description": "Add Description",
+    "add_target_group": "Add Target group",
+    "male_female": "Female & Male",
+    "male": "Male",
+    "female": "Female",
+    "define_details": "Define details",
+    "action_button": "Add call to action button",
+    "yes": "Yes",
+    "no": "No",
+    "insert_link": "Insert link",
+    "define_runtime_budget": "Define runtime & budget",
+    "start": "Start",
+    "end": "End",
+    "define_daily_budget": "Define daily budget",
+    "maximum_number_of_clicks": "Maximum number of clicks",
+    "max_1200_clicks": "Max. 1200 clicks",
+    "information_on_payment": "Information on payment",
+    "actively_clicks": "You only have to pay when a user actively clicks on your ad on Picstagraph.",
+    "cost_control": "100 % cost control",
+    "cost_per_Click": "Cost per Click: 1,00 €",
+    "payment_only_after_ad_was_cloes": "Payment only after ad was cloes",
+    "total_budget_can_not_be_exceeded": "Total budget can not be exceeded",
+    "clicks": "Clicks",
+    "views": "Views",
+    "type": "Type",
+    "applications": "Applications",
+    "status": "Status",
+    "statistics": "Statistics",
+    "total_budget": "Total budget",
+    "budget_spent": "Budget spent",
+    "remaining_Budget": "Remaining Budget",
+    "daily_budget": "Daily budget",
+    "daily_budget_spent": "Daily budget spent",
+    "remaining_daily_budget": "Remaining daily budget",
+    "Performance": "Performance"
+  },
+
+  "create_campaigns": {
+    "clicks": "Clicks",
+    "views": "Views",
+    "title_of_campaigns": "Title of campaigns",
+    "title": "Title",
+    "add_title": "Add title",
+    "inquiry_tag": "Inquiry tag",
+    "select_inquiry": "Select Inquiry",
+    "inquiry": "Inquiry",
+    "offer_tag": "Offer tag",
+    "select_offer": "Select offer",
+    "offer": "Offer",
+    "details_of_campaigns": "Details of campaigns",
+    "male": "Male",
+    "female": "Female",
+    "male_female": "Female & Male",
+    "company": "Company",
+    "target_group": "Target group",
+    "image": "image",
+    "video": "Video",
+    "type": "Type",
+    "anonymous": "Anonymous",
+    "public": "Public",
+    "procedure": "Procedure",
+    "application_criteria": "Application criteria",
+    "select_category": "Select category",
+    "add_category": "Add Category",
+    "add_location": "Add Location",
+    "define_runtime_budget": "Define runtime & budget",
+    "start": "Start",
+    "end": "End",
+    "define_daily_budget": "Define daily budget",
+    "maximum_number_of_clicks": "Maximum number of clicks",
+    "max_1200_clicks": "Max. 1200 clicks",
+    "information_on_payment": "Information on payment",
+    "actively_clicks": "You only have to pay when a user actively clicks on your ad on Picstagraph.",
+    "cost_control": "100 % cost control",
+    "cost_per_Click": "Cost per Click: 1,00 €",
+    "payment_only_after_ad_was_cloes": "Payment only after ad was cloes",
+    "total_budget_can_not_be_exceeded": "Total budget can not be exceeded",
+    "applications": "Applications",
+    "status": "Status",
+    "statistics": "Statistics"
+  },
 
   "messages_modal": {
     "unknown": "Unknown",
@@ -65,6 +164,12 @@
     "platform_policy": "Platform policy",
     "cancellation_policy": "Cancellation Policy",
     "terms_of_use": "Terms of use"
+  },
+
+  "tool_tips": {
+    "report": "Report Post",
+    "save": "Save Post",
+    "lock": "locks / unlocks content"
   },
 
   "back_office_menu": {
@@ -115,7 +220,7 @@
     "legal_notice": "Legal Notice",
     "general_terms_and_conditions": "General terms & Conditions",
     "netzdg": "NETZDG",
-    "language": "Sprache",
+    "language": "Language",
     "terms_of_use": "Terms of Use",
     "better": "For a better user experience we use ",
     "agree": "By using picstagraph you do agree",
@@ -444,5 +549,66 @@
       "name": "year",
       "type": "number"
     }
+  },
+  "editProfile": {
+    "username": "Username",
+    "category": "Category",
+    "email": "Email",
+    "inquiry_tag": "Inquiry-tag",
+    "location": "Location",
+    "name_company": "Name/Company",
+    "offer_tag": "Offer-tag",
+    "phone_number": "Phone-number",
+    "profile_description": "Profile-description",
+    "website": "Website",
+    "gender": "Gender",
+    "D_O_B": "Date of birth",
+    "general_information": "General Information",
+    "Personal_interests": "Personal interests"
+  },
+  "privacy": {
+    "limitations": "Limitations",
+    "set_my_profile_to_private": "Set my profile to private",
+    "Personalized_advertising": "Personalized advertising",
+    "Change_email": "Change email",
+    "Current_Email": "Current Email",
+    "New_Email": "New Email",
+    "Change_Password": "Change Password",
+    "Current_Password": "Current Password",
+    "New_Password": "New Password",
+    "Repeat_Password": "Repeat Password",
+    "Change_invoicing_address": "Change invoicing address",
+    "Invoice_recipient": "Invoice recipient",
+    "Street_number": "Street, number",
+    "Postal_code": "Postal code",
+    "city": "City",
+    "Country": "Country",
+    "VAT_identification_number": "VAT identification number",
+    "Actions": "Actions",
+    "Delete_search_history": "Delete search history",
+    "Delete": "Delete",
+    "Deactivate_my_account": "Deactivate my account",
+    "Deactivate": "Deactivate",
+    "Please_confirm_this_change_in_your_email_account": "Please confirm this change in your email account."
+  },
+  "Business_profile": {
+    "Business_profile": "Business profile",
+    "Business_profile_content": "By activating the business profile, you will get access to the following functions:",
+    "Create": "Create",
+    "ad": "ad",
+    "Add": "Add",
+    "email": "Email",
+    "phone_number": "phone number",
+    "Website": "Website",
+    "Activate": "Activate business profile",
+    "By_clicking_on_register_you_agree_to_our": "By clicking on register you agree to our"
+  },
+  "bill_and_receipts": {
+    "Ad_Campaign_title": "Ad / Campaign title",
+    "Runtime": "Runtime",
+    "Type": "Type",
+    "Expenses": "Expenses",
+    "Status": "Status",
+    "PDF": "PDF"
   }
 }
