changes done for translation in backoffice

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -610,5 +610,67 @@
     "Expenses": "Expenses",
     "Status": "Status",
     "PDF": "PDF"
+  },
+  "landing": {
+    "Navigation": "Navigation",
+    "Review": "Review",
+    "Key_statistics": "Key statistics",
+    "Content_statistics": "Content statistics",
+    "Campaign_statistics_company": "Campaign statistics company",
+    "Ad_statisitcs": "Ad statisitcs",
+    "Reported_content": "Reported content",
+    "Registered_users": "Registered users",
+    "Active_users": "Active users",
+    "Deactivated_accounts": "Deactivated accounts",
+    "Turnover": "Turnover",
+    "Reviews": "Reviews",
+    "Lable": "Lable",
+    "Images": "Images",
+    "Videos": "Videos",
+    "Campaign_Company": "Campaign Company",
+    "Image_Campaign": "Image Campaign",
+    "Video_Campaign": "Video Campaign",
+    "Campaign_Creator": "Campaign Creator",
+    "Pics": "Pics",
+    "Ads": "Ads",
+    "Total": "Total",
+    "Number": "Number",
+    "Active_Campaign": "Active Campaign",
+    "Closed_Campaign": "Closed Campaign",
+    "Campaign_Temp_Closed": "Campaign Temp Closed",
+    "Potential_Turnover": "Potential Turnover",
+    "Total_Turnover": "Total Turnover",
+    "Average_conv_rate_Total": "Average conv rate Total",
+    "Active_Ads": "Active Ads",
+    "Closed_Ads": "Closed Ads",
+    "Ads_Temp_Closed": "Ads Temp Closed"
+  },
+  "cms": {
+    "Title_of_page": "Title of page",
+    "Language": "Language",
+    "Most_recent_change": "Most recent change",
+    "Created_by": "Created by",
+    "Options": "Options",
+    "Status": "Status",
+    "cms": "CMS management"
+  },
+  "admin": {
+    "Add_admin": "Add admin",
+    "Add": "Add",
+    "UserName": "User Name",
+    "Name": "Name",
+    "AdminStatus": "Admin Status",
+    "Verification": "Add verification",
+    "Remove_Verification": "Remove Verification",
+    "Period": "Period",
+    "amount": "amount",
+    "type": "type",
+    "Number": "Number",
+    "Code": "Code",
+    "status": "status",
+    "Add_voucher_code": "Add voucher code",
+    "Data_download": "Data download",
+    "Download": "Download",
+    "Search_in_users": "Search in users"
   }
 }
