worked on news_feed

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -384,7 +384,7 @@
   },
 
   "left_sidebar_owner_menu": {
-    "news_feed": " News Feeds",
+    "news_feed": " News Feed",
     "about": "About",
     "saved": "Saved"
   },
