--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -143,7 +143,7 @@
     "Companies": "Companies"
   },
   "modal_header": {
-    "cancle": "Cancle",
+    "cancle": "Cancel",
     "back": "Back",
     "preview": "Preview",
     "continue": "Continue",
