--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -1,6 +1,10 @@
 {
   "app_name": "Picstagraph",
 
+  "date_format": {
+    "date": "MM/DD/YYYY"
+  },
+  
   "offen": "In der Picstagraph-App offenen",
 
   "subscribe": "Subscribe",
