--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -47,7 +47,7 @@
     "add_location": "Add Location",
     "add_category": "Add Category",
     "add_description": "Add Description",
-    "upload_title_image": "Upload title image"
+    "upload_file": "Upload File"
   },
 
   "create_ads": {
