--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -48,7 +48,7 @@
     "add_category": "Add Category",
     "add_description": "Add Description",
     "advertisement": "Label as advertisement",
-    "upload_title_image": "Upload title image"
+    "upload_file": "Upload File"
   },
 
   "create_ads": {
