Social Share function toggle with redux integration - changes added

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -4,7 +4,7 @@
   "date_format": {
     "date": "MM/DD/YYYY"
   },
-  
+
   "offen": "In der Picstagraph-App offenen",
 
   "subscribe": "Subscribe",
@@ -590,6 +590,7 @@
   "privacy": {
     "limitations": "Limitations",
     "set_my_profile_to_private": "Set my profile to private",
+    "social_share_function": "Social share function",
     "Personalized_advertising": "Personalized advertising",
     "Change_email": "Change email",
     "Current_Email": "Current Email",
