Language values added in left sidebar - changes added

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -267,6 +267,10 @@
   },
 
   "left_sidebar_filter": {
+    "language": {
+      "name": "Language",
+      "type": "radio"
+    },
     "relevance": {
       "name": "Relevance",
       "type": "radio"
