--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -623,7 +623,9 @@
     "Current_Password_is_required": "Current Password is required",
     "New_Password_is_required": "New Password is required",
     "Repeat_Password_is_required": "Repeat Password is required",
-    "Password_is_not_matching": "Password is not matching"
+    "Password_is_not_matching": "Password is not matching",
+    "server_error": "Something went wrong. Please Try Again",
+    "Password_Length_error": "Password Length should be greater than 8 characters"
   },
   "Business_profile": {
     "Business_profile": "Business profile",
