Category list changes added

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -286,7 +286,7 @@
     },
     "category": {
       "name": "Category",
-      "type": "select"
+      "type": "select-category"
     },
     "procedure": {
       "name": "Procedure",
