--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -305,7 +305,7 @@
     },
     "offer_tag": {
       "name": "Offer tag",
-      "type": "text"
+      "type": "text-offer-tag"
     },
     "inquiry": {
       "name": "Inquiry",
@@ -313,7 +313,7 @@
     },
     "inquiry_tag": {
       "name": "Inquiry tag",
-      "type": "text"
+      "type": "text-inquiry-tag"
     },
     "reset_filters": {
       "name": "Reset filters",
