fix comment issue and set state for create campaign modal

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -115,7 +115,7 @@
     "male_female": "Female & Male",
     "company": "Company",
     "target_group": "Target group",
-    "image": "image",
+    "image": "Image",
     "video": "Video",
     "type": "Type",
     "anonymous": "Anonymous",
