--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -297,7 +297,7 @@
     },
     "target_group": {
       "name": "Target group",
-      "type": "select"
+      "type": "select-target-group"
     },
     "offer": {
       "name": "Offer",
