--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -298,7 +298,7 @@
     },
     "target_group": {
       "name": "Target group",
-      "type": "select"
+      "type": "select-target-group"
     },
     "offer": {
       "name": "Offer",
